--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.1"
   },
   "devDependencies": {
